--- a/PaginaProductos/productos.html
+++ b/PaginaProductos/productos.html
@@ -45,6 +45,11 @@
             </li>
         </ul>  
     </main>
+
+    <footer>
+        <img src="/img/logo-blanco.png" alt="">
+        <p>&copy Copyright Barberia Alura 2022</p>
+    </footer>
     
 </body>
 </html>
