--- a/productos.html
+++ b/productos.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Chivo+Mono:wght@300;500;700&family=Roboto+Slab:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="style.css">
     <title>Productos</title>
 </head>
 <body>
@@ -15,9 +15,9 @@
             <h1><img src="/img/logo.png" alt=""></h1>
             <nav>
                 <ul>
-                    <li><a href="/barberia/index.html">Home</a></li>
-                    <li><a href="/PaginaProductos/productos.html">Productos</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="/productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
