--- a/contacto.html
+++ b/contacto.html
@@ -15,8 +15,8 @@
             <h1><img src="/img/logo.png" alt=""></h1>
             <nav>
                 <ul>
-                    <li><a href="/barberia/index.html">Home</a></li>
-                    <li><a href="/PaginaProductos/productos.html">Productos</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="productos.html">Productos</a></li>
                     <li><a href="">Contacto</a></li>
                 </ul>
             </nav>
@@ -24,7 +24,38 @@
     </header>
 
     <main>
-        Hola
+        <form>
+            <label for="nombreapellido">Nombre y Apellido</label>
+            <input type="text" name="" id="nombreapellido" class="input-padron">
+
+            <label for="correoelectronico">Correo Eletrónico</label>
+            <input type="text" id="correoelectronico" class="input-padron">
+
+            <label for="telefono">Teléfono</label>
+            <input type="text" id="telefono" class="input-padron">
+
+            <label for="mensaje">Mensaje</label>
+            <textarea name="" id="mensaje" cols="70" rows="10" class="input-padron"></textarea>
+
+            <div>
+                <p>¿Cómo le gustaría que le contactemos?</p>
+                <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
+                <label for="radio-telefono"><input type="radio" name="contacto" value="telefono" id="radio-telefono">Teléfono</label>
+                <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp">WhatsApp</label>
+                <label for=""><input type="checkbox">¿Le gustaría recibir novedades de la Barbería Alura?</label>
+                
+                <div>
+                    <p>¿En qué horario podemos comunicarnos con usted?</p>
+                    <select name="" id="">
+                        <option value="">Mañana</option>
+                        <option value="">Tarde</option>
+                        <option value="">Noche</option>
+                    </select>
+                </div>
+
+                <input class="checkbox" type="submit" value="Enviar formulario">
+            </div>
+        </form>
     </main>
 
     <footer>
