--- a/contacto.html
+++ b/contacto.html
@@ -42,7 +42,7 @@
                 <label for="radio-email"><input type="radio" name="contacto" value="email" id="radio-email">Email</label>
                 <label for="radio-telefono"><input type="radio" name="contacto" value="telefono" id="radio-telefono">Teléfono</label>
                 <label for="radio-whatsapp"><input type="radio" name="contacto" value="whatsapp" id="radio-whatsapp" checked>WhatsApp</label>
-                <label for=""><input type="checkbox" checked>¿Le gustaría recibir novedades de la Barbería Alura?</label>
+                
                 
                 <fieldset>
                     <legend>¿En qué horario podemos comunicarnos con usted?</legend>
@@ -53,7 +53,9 @@
                     </select>
                 </fieldset>
 
-                <input class="checkbox" type="submit" value="Enviar formulario">
+                <label class="checkbox"><input type="checkbox" checked>¿Le gustaría recibir novedades de la Barbería Alura?</label>
+
+                <input class="enviar" type="submit" value="Enviar formulario">
             </fieldset>
         </form>
     </main>
