--- a/contacto.html
+++ b/contacto.html
@@ -58,6 +58,30 @@
                 <input class="enviar" type="submit" value="Enviar formulario">
             </fieldset>
         </form>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Día</th>
+                    <th>Horario</th>
+                </tr> 
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Lunes</td>
+                    <td>8h a 20h</td>
+                </tr>
+                <tr>
+                    <td>Miércoles</td>
+                    <td>8h a 20h</td>
+                </tr>
+                <tr>
+                    <td>Viernes</td>
+                    <td>8h a 20h</td>
+                </tr>
+            </tbody>
+            
+        </table>
     </main>
 
     <footer>
