cambios en el index, mejorando el style, se utiliza style

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <main>
             <section class="principal">
             <h2 class="titulo-principal" >Sobre la Barbería Alura</h2>
+            <img class="utensilios" src="/img/utensilios[1].jpg" alt="Utensilios de un barbero">
                 <p>
                     Ubicada en el corazón de la ciudad, la <strong>Barbería Alura</strong> trae para el mercado lo que hay de mejor para su cabello y barba. Fundada en 2020, la Barbería Alura ya es destaque en la ciudad y conquista nuevos clientes diariamente. 
                 </p>
@@ -40,7 +41,7 @@
             </section>
         
             <section class="diferenciales">
-            <h3 class="titulo-centralizado" >Nuestros servicios</h3>
+            <h3 class="titulo-principal" >Nuestros servicios</h3>
                 <ul>
                     <li class="items">Atención personalizada a los clientes</li>
                     <li class="items">Espacio diferenciado</li>
