--- a/index.html
+++ b/index.html
@@ -43,24 +43,29 @@
             <section class="mapa">
                 <h3 class="titulo-principal">Nuestra Ubicación</h3>
                 <p>Nuestro establecimiento se encuentra en el corazón de la ciudad</p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.44997746656!2d-46.634520585816574!3d-23.588189868466937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2smx!4v1671738490062!5m2!1ses-419!2smx" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <div class="mapa-contenido">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.44997746656!2d-46.634520585816574!3d-23.588189868466937!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5a2b2ed7f3a1%3A0xab35da2f5ca62674!2sCaelum%20-%20Education%20and%20Innovation!5e0!3m2!1ses-419!2smx!4v1671738490062!5m2!1ses-419!2smx" width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
             </section>
         
             <section class="diferenciales">
-            <h3 class="titulo-principal" >Nuestros servicios</h3>
-                <ul>
-                    <li class="items">Atención personalizada a los clientes</li>
-                    <li class="items">Espacio diferenciado</li>
-                    <li class="items">Buena ubicación</li>
-                    <li class="items">Profesionales certificados</li>
-                </ul>
-                <img class="imgDiferencial" src="/img/diferenciales.jpg">
+                <h3 class="titulo-principal" >Nuestros servicios</h3>
+                <div class="contenido-diferenciales">
+                    <ul class="lista-diferenciales">
+                        <li class="items">Atención personalizada a los clientes</li>
+                        <li class="items">Espacio diferenciado</li>
+                        <li class="items">Buena ubicación</li>
+                        <li class="items">Profesionales certificados</li>
+                        <li class="items">Puntualidad</li>
+                        <li class="items">Limpieza</li>
+                    </ul>
+                    <img class="imagen-diferenciales" src="/img/diferenciales.jpg">
+                </div>
             </section>
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/wsVqtO9cMok?start=249" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </main>
-        
 
         <footer>
             <img src="/img/logo-blanco.png" alt="">
