--- a/index.html
+++ b/index.html
@@ -61,10 +61,11 @@
                     </ul>
                     <img class="imagen-diferenciales" src="/img/diferenciales.jpg">
                 </div>
+                <div class="video">
+                    <iframe width="100%" height="315" src="https://www.youtube.com/embed/wsVqtO9cMok?start=249" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
             </section>
-            <div class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/wsVqtO9cMok?start=249" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </div>
+            
         </main>
 
         <footer>
